--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="styles/vars.css">
+  <script defer src="js/flicker.js"></script>
   <title>blxckOxymoron</title>
 </head>
 
 <body>
   <header>
     <img src="assets/Profile3dAnimated.gif" alt="logo">
-    <h2>blxckOxymoron</h2>
+    <h2 flicker="0.4">blxckOxymoron</h2>
     <ul>
       <li>
         <a href="#">Link</a>
@@ -29,6 +30,15 @@
       </li>
     </ul>
   </header>
+  <main>
+    <!-- <details>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, cum?</p>
+      <p>Sit ipsam rem, nulla consequatur in earum magni hic ratione.</p>
+      <p>Doloribus asperiores vitae doloremque eum quas, aperiam inventore esse. Earum.</p>
+      <p>Ab tempora repudiandae modi quisquam optio dignissimos vitae pariatur velit!</p>
+      <p>Nobis vero dignissimos laboriosam eligendi nemo magni omnis? Autem, maiores.</p>
+    </details> -->
+  </main>
 </body>
 
 </html>
