--- a/cv/index.html
+++ b/cv/index.html
@@ -167,10 +167,8 @@
   <!-- fkin email -->
   <header>
     <h1>Lebenslauf & Interessen</h1>
-    <p>Sehr geehrte Frau Leutner,</p>
-    <p>ich freue mich sehr über die Offenheit für ein Praktikum und möchte ihnen hiermit meinen Lebenslauf zukommen
-      lassen. Sollte es noch irgendwelche offenen Fragen geben, beantworte ich diese gerne. Im Anhang ist zudem auch ein
-      Brief unseres Gymnasiums an Partner.</p>
+    <p>Hallo</p>
+
   </header>
   <div class="nav">
     <!-- gmailll -->
@@ -188,9 +186,9 @@
     <section>
       <h3 id="About">Über mich</h3>
       <p>
-        <b>Name:</b> Daniel Bihlmaier <br>
-        <b>Geboren:</b> 23.02.2007 in Pforzheim <br>
-        <b>Email:</b> daniel.m.bihlmaier@gmail.com
+        <b>Name:</b> ... <br>
+        <b>Geboren:</b> ... <br>
+        <b>Email:</b> ...
       </p>
     </section>
     <section>
@@ -236,8 +234,7 @@
     <section>
       <h3>Projekte / Referenzen</h3>
       <p>Meine aktuellsten Projekte kann man mit Quellcode <a href="https://github.com/blxckOxymoron">hier auf
-          GitHub</a> finden, Scratch Projekte <a href="https://scratch.mit.edu/users/DB-spieler/">hier.</a> <br>
-        Und diese Email habe natürlich auch ich gemacht 😄</p>
+          GitHub</a> finden, Scratch Projekte <a href="https://scratch.mit.edu/users/DB-spieler/">hier.</a> <br></p>
     </section>
   </div>
 </div>
